adding genetic algorithm and complete search